style.css
/* Meyer's Reset */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
	

}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Main CSS */
* {
	color: white;
}
body {
	width: 1440px;
	background-color: hsl(218, 28%, 13%);
}

header {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-between;
	padding-left: 10%;
	padding-right: 10%;
	padding-top: 40px;
}

nav {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	width: 200px;
	justify-content: space-between;
	
}
nav>a {
	font-family: 'Raleway', sans-serif;
	font-weight: 400;
	font-size: 14px;
	text-decoration: none;
	color: white;
}

nav>a:hover {
	
	font-weight: 700;
}


.container>img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
}

.main {
	display: flex;
	flex-direction: column;
	justify-content: center;
	color: white;
	height: 300px;
	width: 50%;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 40px;
	text-align: center;

}

.main>h1 {
	font-family: 'Raleway', sans-serif;
	font-size: 2.5em;
	font-weight: 700;
	margin-bottom: 20px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}

.main>p {
	font-family: 'Raleway', sans-serif;
	font-size: 1.4em;
	font-weight: 400;
	margin-bottom: 20px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}

.main>a {
	font: 'Raleway', sans-serif;
	font-weight: 400;
	font-size: 1.4em;
	background-image: linear-gradient(hsl(176, 68%, 64%), hsl(198, 60%, 50%));
	color: white;
	border-radius: 30px;
	width: 300px;
	height: 46px;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: row;
	margin-left: auto;
	margin-right: auto;
	text-decoration: none;

}

.features {
	width: 50%;
	margin-left: auto;
	margin-right: auto;
	height: 440px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between;
	color: white;
	font-family: 'Raleway', sans-serif;
	font-weight: 400;
	margin-bottom: 40px;

}

.features>section {

	width: 40%;
	height: 200px;
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
	margin-bottom: 40px;
	text-align: center;
}

.features>section>img {
	margin-bottom: 20px;
}
.features>section>h2 {
	font-weight: 700;
	font-style: 'Raleway', sans-serif;
	margin-bottom: 20px;
}

footer {
	background-color: hsl(216, 53%, 9%);
	height: 300px;
}

